--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "bootstrap": "^4.5.3",
+    "common.js": "^1.1.1",
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1"
   },
