--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vaadin/router": "^2.0.0",
+    "axios": "^1.7.7",
     "lit": "^3.2.1"
   },
   "devDependencies": {
